# AlchemyCat

./: .gitignore  README.md  README_CN.md  __init__.py  pyproject.toml  requirements.txt  setup.py
acplot/: __init__.py  figure_wall.py  plot_conf_matrix.py  subplots_row_col.py  utils.py
alchemy_cat/: __init__.py
alchemy_cat/acplot/: __init__.py  figure_wall.py  plot_conf_matrix.py  shuffle_ch.py  utils.py
alchemy_cat/alg/: clamp_softmax.py  cnn_align.py  complement_entropy_confidence.py  dense_crf.py  eval_cams.py  masked_softmax.py  msc_flip_inference.py  normalize_tensor.py  sampling.py  slide_inference.py  utils.py  window_slides.py
alchemy_cat/dag/: core.py  (+1 more)
alg/: __init__.py  clamp_softmax.py  cnn_align.py  dense_crf.py  msc_flip_inference.py  normalize_tensor.py  resize.py  sampling.py  slide_inference.py  utils.py
contrib/: __init__.py  module_init_fns.py
dag/: __init__.py  core.py  data.py  io.py  utils.py
data/: DataManager.py  __init__.py  data_auger.py  data_manager.py  dataset.py  prefetcher.py
py_tools/: __init__.py  _dataclasses.py  cache_dir.py  cat_head.py  color_print.py  const.py  file_md5.py  find_files.py  func_tools.py  get_process_info.py  is_type.py  load_module.py  logger.py  loguru_exts.py  parse_log.py  process_bar.py  quick_init.py  random.py  str_formatters.py  timer.py  tracker.py  type.py
torch_tools/: __init__.py  average_value_tracker.py  dist_communication.py  env.py  intermediate_value_getter.py  loss_items.py  to_cuda.py  val_env.py
visualization/: __init__.py  figure_wall.py  utils.py
xlsm_funcs/: stat_metrics.py
(+308 files in other folders)
